<?xml version="1.0"?>
<package format="2">
  <name>stereo_depth_node</name>
  <version>0.0.0</version>
  <description>The stereo_depth_node package</description>

  <maintainer email="zzangjinsun@gmail.com">Jinsun Park</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
